<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.charlesmaten.locationapp.ActivityLocation">
    <item
        android:id="@+id/action_hybrid"
        android:title="@string/action_hybrid"
        yourapp:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_normal"
        android:title="@string/action_normal"
        yourapp:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_terrain"
        android:title="@string/action_terrain"
        yourapp:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_sendSms"
        android:icon="@drawable/sms"
        android:title="@string/action_sendSms"
        yourapp:showAsAction="always"/>
    <item
        android:id="@+id/action_sendMail"
        android:icon="@drawable/mail"
        android:title="@string/action_sendMail"
        yourapp:showAsAction="always"/>
</menu>
